--- a/index.html
+++ b/index.html
@@ -168,7 +168,7 @@
                     <p>En février 2022, je suis allé dans le nord de la Norvège pour y passer quelques semaines. J'ai navigué des îles Lofoten en allant jusqu'à la pointe nord. Les paysages sont magnifique et changent tous les jours. Il y a tellement de beauté dans l'Arctique, c'est sans nul doute l'une des destinations les plus magnifique au monde...</p>
                 </div>
             </div>
-            <div class="row">
+            <div class="row reverse">
                 <div class="col">
                     <h2>Safari en Afrique du Sud</h2>
                     <p>Partez à l'aventure en Afrique du Sud avec un Self Drive Safari : liberté totale pour explorer la faune sauvage à votre rythme !!</p>
@@ -186,7 +186,7 @@
                     <p>Voyageur solitaire ? En Namibie, ne manquez surtout pas le parc d’Etosha, avec son marais salant unique et ses rencontres animales inoubliables à l’aube et au crépuscule.</p>
                 </div>
             </div>
-            <div class="row">
+            <div class="row reverse">
                 <div class="col">
                     <h2>Safari au Kenya - Sony a6500 / Cinematic 4k</h2>
                     <p>Pour ceux qui projetteraient de s'offrir des vacances en Afrique pour faire un Safari, le Kenya est l'un des plus beaux pays pour cela.</p>
