--- a/index.html
+++ b/index.html
@@ -3,9 +3,14 @@
 
 <head>
     <meta charset="UTF-8"> 
-    <title>Voyage en images - Fabien Moliné</title> 
+    <title>Voyage en images - Immortalisez la beauté sauvage des paysages et des animaux - Portfolio créé par Fabien Moliné</title> 
+    <meta name="description" content="Découvrez des photos et vidéos captivante à travers la nature et la faune. Immortalisez la beauté sauvage des paysages et des animaux grâce à des images authentiques et des vidéos immersives. Exploration de la biodiversité et protection de l'environnement à travers l'objectif." />
+    <meta name="keywords" content="fabien moline, fabien, moline, photographe nature, photographe animalier, vidéaste nature, vidéo animalière, portfolio photographie, portfolio vidéaste, photos de nature, vidéos de faune, paysages sauvages, photographie animalière, vidéos de nature, art nature, protection environnement, biodiversité, photographie paysage, documentaire animalier, passion nature, faune et flore, photo haute qualité, vidéo immersive" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="photos.css">
+    <link rel="stylesheet" href="videos.css">
+    <link rel="stylesheet" href="contact.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.cdnfonts.com/css/anamortee" rel="stylesheet">
