--- a/index.html
+++ b/index.html
@@ -210,6 +210,7 @@
         <div class="row" style="max-width: 1200px; margin-bottom: 75px;">
             <div class="col m-pr-50">
                 <img src="assets/images/contact.png" class="img-contact" alt="">
+                <h1 style="font-size: 70px; margin-top: 0; color: #71777d;">Fabien Moliné</h1>
             </div>
             <div class="col">
                 <form action="https://api.web3forms.com/submit" method="POST" id="form">
