--- a/index.html
+++ b/index.html
@@ -67,97 +67,97 @@
             <button class="btn fil-cat filter" data-rel="afrique_du_sud" data-filter=".south-africa">Afrique du sud</button>
         </div> 
         
-        <div id="portfolio"> 
-            <div class="tile scale-anm namibia">
-                <img src="assets/min-images/namibie-pano-2.png" alt="" />
-            </div>
-            <div class="tile scale-anm namibia" >
-                <img src="assets/min-images/namibia-landscape-2.png" alt="" />
-            </div>
-            <div class="tile scale-anm namibia" >
-                <img src="assets/min-images/namibia-portrait-1.png" alt="" />
-            </div>
-            <div class="tile scale-anm kenya" >
-                <img src="assets/min-images/kenya-landscape-1.png" alt="" />
-            </div>
-            <div class="tile scale-anm south-africa" >
-                <img src="assets/min-images/south-africa-portrait-1.png" alt="" />
-            </div>
-            <div class="tile scale-anm namibia">
-                <img src="assets/min-images/namibie-pano-5.png" alt="" />
-            </div>
-            <div class="tile scale-anm kenya">
-                <img src="assets/min-images/kenya-portrait-1.png" alt="" />
-            </div>
-            <div class="tile scale-anm namibia" >
-                <img src="assets/min-images/namibie-pano-6.png" alt="" />
-            </div>
-            <div class="tile scale-anm kenya" >
-                <img src="assets/min-images/kenya-portrait-7.png" alt="" />
-            </div>
-            <div class="tile scale-anm kenya" style="margin-top: 55px;">
-                <img src="assets/min-images/kenya-portrait-6.png" alt="" />
-            </div>
-            <div class="tile scale-anm namibia" >
-                <img src="assets/min-images/namibia-portrait-5.png" alt="" />
-            </div>
-            <div class="tile scale-anm south-africa" >
-                <img src="assets/min-images/south-africa-landscape-2.png" alt="" />
-            </div>
-            <div class="tile scale-anm kenya" >
-                <img src="assets/min-images/kenya-portrait-3.png" alt="" />
-            </div>
-            <div class="tile scale-anm namibia" >
-                <img src="assets/min-images/namibie-pano-1.png" alt="" />
-            </div>
-            <div class="tile scale-anm kenya" >
-                <img src="assets/min-images/kenya-portrait-5.png" alt="" />
-            </div>
-            <div class="tile scale-anm namibia" >
-                <img src="assets/min-images/namibia-portrait-4.png" alt="" />
-            </div>
-            <div class="tile scale-anm south-africa" >
-                <img src="assets/min-images/south-africa-landscape-1.png" alt="" />
-            </div>
-            <div class="tile scale-anm kenya" >
-                <img src="assets/min-images/kenya-portrait-8.png" alt="" />
-            </div>
-            <div class="tile scale-anm namibia" >
-                <img src="assets/min-images/namibie-pano-4.png" alt="" />
-            </div>
-            <div class="tile scale-anm kenya" >
-                <img src="assets/min-images/kenya-portrait-4.png" alt="" />
-            </div>
-            <div class="tile scale-anm namibia" >
-                <img src="assets/min-images/namibia-landscape-1.png" alt="" />
-            </div>
-            <div class="tile scale-anm namibia" >
-                <img src="assets/min-images/namibia-portrait-2.png" alt="" />
-            </div>
-            <div class="tile scale-anm kenya" >
-                <img src="assets/min-images/kenya-portrait-2.png" alt="" />
-            </div>
-            <div class="tile scale-anm namibia" style="margin-top: 55px;">
-                <img src="assets/min-images/namibia-portrait-3.png" alt="" />
-            </div>
-            <div class="tile scale-anm namibia" >
-                <img src="assets/min-images/namibie-pano-3.png" alt="" />
-            </div>
-            <div class="tile scale-anm south-africa" >
-                <img src="assets/min-images/south-africa-portrait-2.png" alt="" />
-            </div>
-            <div class="tile scale-anm kenya" >
-                <img src="assets/min-images/kenya-pano-1.png" alt="" />
-            </div>
-            <div class="tile scale-anm south-africa" >
-                <img src="assets/min-images/south-africa-portrait-3.png" alt="" />
-            </div>
-            <div class="tile scale-anm namibia" >
-                <img src="assets/min-images/namibia-landscape-3.png" alt="" />
-            </div>
-            <div class="tile scale-anm kenya" >
-                <img src="assets/min-images/kenya-portrait-9.png" alt="" />
-            </div>
+        <div id="portfolio">
+          <div class="tile scale-anm namibia">
+              <img src="assets/min-images/namibie-pano-2.png" data-full="assets/max-images/namibie-pano-2.png" alt="" />
+          </div>
+          <div class="tile scale-anm namibia" >
+              <img src="assets/min-images/namibia-landscape-2.png" data-full="assets/max-images/namibia-landscape-2.png" alt="" />
+          </div>
+          <div class="tile scale-anm namibia" >
+              <img src="assets/min-images/namibia-portrait-1.png" data-full="assets/max-images/namibia-portrait-1.png" alt="" />
+          </div>
+          <div class="tile scale-anm kenya" >
+              <img src="assets/min-images/kenya-landscape-1.png" data-full="assets/max-images/kenya-landscape-1.png" alt="" />
+          </div>
+          <div class="tile scale-anm south-africa" >
+              <img src="assets/min-images/south-africa-portrait-1.png" data-full="assets/max-images/south-africa-portrait-1.png" alt="" />
+          </div>
+          <div class="tile scale-anm namibia">
+              <img src="assets/min-images/namibie-pano-5.png" data-full="assets/max-images/namibie-pano-5.png" alt="" />
+          </div>
+          <div class="tile scale-anm kenya">
+              <img src="assets/min-images/kenya-portrait-1.png" data-full="assets/max-images/kenya-portrait-1.png" alt="" />
+          </div>
+          <div class="tile scale-anm namibia" >
+              <img src="assets/min-images/namibie-pano-6.png" data-full="assets/max-images/namibie-pano-6.png" alt="" />
+          </div>
+          <div class="tile scale-anm kenya" >
+              <img src="assets/min-images/kenya-portrait-7.png" data-full="assets/max-images/kenya-portrait-7.png" alt="" />
+          </div>
+          <div class="tile scale-anm kenya" style="margin-top: 55px;">
+              <img src="assets/min-images/kenya-portrait-6.png" data-full="assets/max-images/kenya-portrait-6.png" alt="" />
+          </div>
+          <div class="tile scale-anm namibia" >
+              <img src="assets/min-images/namibia-portrait-5.png" data-full="assets/max-images/namibia-portrait-5.png" alt="" />
+          </div>
+          <div class="tile scale-anm south-africa" >
+              <img src="assets/min-images/south-africa-landscape-2.png" data-full="assets/max-images/south-africa-landscape-2.png" alt="" />
+          </div>
+          <div class="tile scale-anm kenya" >
+              <img src="assets/min-images/kenya-portrait-3.png" data-full="assets/max-images/kenya-portrait-3.png" alt="" />
+          </div>
+          <div class="tile scale-anm namibia" >
+              <img src="assets/min-images/namibie-pano-1.png" data-full="assets/max-images/namibie-pano-1.png" alt="" />
+          </div>
+          <div class="tile scale-anm kenya" >
+              <img src="assets/min-images/kenya-portrait-5.png" data-full="assets/max-images/kenya-portrait-5.png" alt="" />
+          </div>
+          <div class="tile scale-anm namibia" >
+              <img src="assets/min-images/namibia-portrait-4.png" data-full="assets/max-images/namibia-portrait-4.png" alt="" />
+          </div>
+          <div class="tile scale-anm south-africa" >
+              <img src="assets/min-images/south-africa-landscape-1.png" data-full="assets/max-images/south-africa-landscape-1.png" alt="" />
+          </div>
+          <div class="tile scale-anm kenya" >
+              <img src="assets/min-images/kenya-portrait-8.png" data-full="assets/max-images/kenya-portrait-8.png" alt="" />
+          </div>
+          <div class="tile scale-anm namibia" >
+              <img src="assets/min-images/namibie-pano-4.png" data-full="assets/max-images/namibie-pano-4.png" alt="" />
+          </div>
+          <div class="tile scale-anm kenya" >
+              <img src="assets/min-images/kenya-portrait-4.png" data-full="assets/max-images/kenya-portrait-4.png" alt="" />
+          </div>
+          <div class="tile scale-anm namibia" >
+              <img src="assets/min-images/namibia-landscape-1.png" data-full="assets/max-images/namibia-landscape-1.png" alt="" />
+          </div>
+          <div class="tile scale-anm namibia" >
+              <img src="assets/min-images/namibia-portrait-2.png" data-full="assets/max-images/namibia-portrait-2.png" alt="" />
+          </div>
+          <div class="tile scale-anm kenya" >
+              <img src="assets/min-images/kenya-portrait-2.png" data-full="assets/max-images/kenya-portrait-2.png" alt="" />
+          </div>
+          <div class="tile scale-anm namibia"  style="margin-top: 55px;">
+              <img src="assets/min-images/namibia-portrait-3.png" data-full="assets/images/namibia-portrait-3.png" alt="" />
+          </div>
+          <div class="tile scale-anm namibia">
+              <img src="assets/min-images/namibie-pano-3.png" data-full="assets/images/namibie-pano-3" alt="" />
+          </div>
+          <div class="tile scale-anm south-africa" >
+              <img src="assets/min-images/south-africa-portrait-2.png" data-full="assets/max-images/south-africa-portrait-2.png" alt="" />
+          </div>
+          <div class="tile scale-anm kenya" >
+              <img src="assets/min-images/kenya-pano-1.png" data-full="assets/max-images/kenya-pano-1.png" alt="" />
+          </div>
+          <div class="tile scale-anm south-africa" >
+              <img src="assets/min-images/south-africa-portrait-3.png" data-full="assets/max-images/south-africa-portrait-3.png" alt="" />
+          </div>
+          <div class="tile scale-anm namibia" >
+              <img src="assets/min-images/namibia-landscape-3.png" data-full="assets/max-images/namibia-landscape-3.png" alt="" />
+          </div>
+          <div class="tile scale-anm kenya" >
+              <img src="assets/min-images/kenya-portrait-9.png" data-full="assets/max-images/kenya-portrait-9.png" alt="" />
+          </div>
         </div>
 
         <div id="videos"></div>
@@ -243,6 +243,18 @@
     </div>
 
     <div style="clear:both;"></div>
+
+    <div class="modal">
+      <span class="close">&times;</span>
+      <div class="modal-content">
+          <div class="carousel">
+              <button class="carousel-button prev">&lt;</button>
+              <div class="carousel-container"></div>
+              <button class="carousel-button next">&gt;</button>
+          </div>
+      </div>
+    </div>
+    
     <script  src="script.js"></script>
 
 </body>
