--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@
             <div class="tile scale-anm norway"><img src="assets/min-images/norway-pano-2.png" data-full="assets/max-images/norway-pano-2.png" alt="" /></div>
             <div class="tile scale-anm norway"><img src="assets/min-images/norway-portrait-1.png" data-full="assets/max-images/norway-portrait-1.png" alt="" /></div>
             <div class="tile scale-anm norway"><img src="assets/min-images/norway-portrait-2.png" data-full="assets/max-images/norway-portrait-2.png" alt="" /></div>
-            <div class="tile scale-anm norway"><img src="assets/min-images/norway-square-1.png" data-full="assets/max-images/norway-square-1.png" alt="" /></div>
+            <div class="tile scale-anm norway"><img src="assets/min-images/norway-square-1.png" data-full="assets/max-images/norway-square-1.jpg" alt="" /></div>
             <div class="tile scale-anm south-africa"><img src="assets/min-images/south-africa-landscape-1.png" data-full="assets/max-images/south-africa-landscape-1.png" alt="" /></div>
             <div class="tile scale-anm south-africa"><img src="assets/min-images/south-africa-landscape-2.png" data-full="assets/max-images/south-africa-landscape-2.png" alt="" /></div>
             <div class="tile scale-anm south-africa"><img src="assets/min-images/south-africa-landscape-3.png" data-full="assets/max-images/south-africa-landscape-3.png" alt="" /></div>
