--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 <body>
     <div class="header">
         <img src="assets/logo.png" class="logo" alt="Fab Créatif">
-        <div class="menu">
+        <div class="menu hideForMobile">
             <ul>
                 <li><a class="link_anchor" href="#photos">photos</a></li>
                 <li><a class="link_anchor" href="#videos">videos</a></li>
@@ -40,8 +40,8 @@
 
     <div class="parallax">
 
-        <div class="ball"></div>
-        <div class="ball2"></div>
+        <div class="ball hideForMobile"></div>
+        <div class="ball2 hideForMobile"></div>
 
         <div class="head">
             <div class="landscape" id="landscape0"></div>
